<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.final2.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/activity_array" />
    <fragment
        android:id="@+id/fav"
        android:name="com.example.final2.FavoritFragment"
        android:label="@string/buy"
        tools:layout="@layout/activity_favorite" />
    <fragment
        android:id="@+id/noti"
        android:name="com.example.final2.NotifFragment"
        android:label="@string/heart"
        tools:layout="@layout/activity_notification" />


</navigation>