<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    tools:context=".RegesterActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/group_921"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Name"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_shape2"
        android:drawableStart="@drawable/group_922"
        android:drawablePadding="8dp"
        android:hint="@string/userName"
        android:inputType="text"
        android:padding="8dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_name" />

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"

        android:background="@drawable/btn_shape2"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:hint="@string/phone"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone" />


    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_phone" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_shape2"
        android:drawableStart="@drawable/path__1"

        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pass" />


    <TextView
        android:id="@+id/tv_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/reset_pass"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_pass" />

    <EditText
        android:id="@+id/ed_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_shape2"
        android:drawableStart="@drawable/path__1"

        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/reset_pass"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_pass" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_regester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/btn_shape2"
        android:text="@string/a"
        android:textColor="#1B1B1B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_regester_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_reset_pass"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_regester_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_login_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_regester"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_regester_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_3"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_regester_2"
        app:layout_constraintStart_toEndOf="@id/tv_regester_2"
        app:layout_constraintTop_toTopOf="@+id/tv_regester_2"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>