<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/mobile_login_pana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/userName"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />


    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ed_shape"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/userName"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="#FFD6C8C8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_name" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="#FFD6C8C8"
        android:background="@drawable/ed_shape"
        android:drawableStart="@drawable/path__1"
        android:drawablePadding="8dp"
        android:gravity="start"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pass" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forget_pass"
        android:textStyle="bold"
        android:textColor="#D6C8C8"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="@id/ed_pass"
        app:layout_constraintTop_toBottomOf="@id/ed_pass" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/btn_shape1"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget" />

    <TextView
        android:id="@+id/tv_regester_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tv_regester_2"
        android:textColor="#AAA4A4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_regester_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_regester_2"
        app:layout_constraintTop_toBottomOf="@id/tv_regester_2" />
</androidx.constraintlayout.widget.ConstraintLayout>