<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notification">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/path_94"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="74dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="4dp"
        android:text="5:30am"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="6:30pm"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="264dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/notification"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="128dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="289dp"
        android:layout_height="72dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/te1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="271dp"
        android:layout_height="76dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="48dp"
        android:text="@string/tx2"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/m1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ccptcher"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="140dp" />

    <ImageView
        android:id="@+id/m2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/group_41619"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="287dp" />


</androidx.constraintlayout.widget.ConstraintLayout>